Improve ref-update validators tests
Make sure that ref-update validators tests are more representative
of a real scenario, having the local ref-update to actually perform the
operation or, when used as a mock, simulate the before and after the update
local ref status.

Change-Id: I1c05dc3d9521cd2579ca0d3d8ec21024a26b47a5